# shoes_store_rust

./: .env.example  .gitignore  Cargo.toml  README.md
assets/js/: bootstrap.min.js
migrations/: 20250930115512_customers.sql  20250930115514_products.sql  20250930175004_products_code.sql  20250930175133_category.sql  20250930183237_fill_categories.sql  20250930183459_cat_products.sql  20251002201114_rating_product.sql  20251007205624_orders.sql  20251007210416_orders_product.sql  20251009102505_customer_password.sql  20251009144941_uq_constraint_email.sql  20251018113904_orders.sql  20251018115159_orders_products.sql  20251018130711_orders_consumer_bigint.sql  20251018150820_order_product_sum.sql  20251018154420_order_status.sql
src/: config.rs  db.rs  main.rs  middlewares.rs  router.rs
src/models/: customer.rs  mod.rs  order.rs  products.rs  state.rs
src/repository/: customer_repository.rs  mod.rs  order_repository.rs  product_repository.rs
src/services/: auth.rs
src/templates/: about.html  base.html  contact.html  index.html  list-orders.html  login.html  orders.html  products.html  profile.html  registration.html  single-product.html
src/templates/includes/: footer.html  header.html
src/views/: about.rs  customer.rs  home.rs  mod.rs  order.rs  products.rs
